package com.github.floriangubler.model;

public enum BookingStatus {
    ORDERED,
    APPROVED,
    DECLINED;
}
