package com.github.floriangubler.model;

public enum BookingTime {
    MORNING,
    AFTERNOON,
    DAY;
}
